tests/spec/emit/snapshots/emit_string_multiline_basic.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    let s = "a
  b"
    s
  }
---
package main

func test() string {
	s := "a\nb"
	return s
}
