tests/spec/emit/snapshots/emit_string_singleline_unchanged.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    let s = "x"
    s
  }
---
package main

func test() string {
	s := "x"
	return s
}
