tests/spec/emit/snapshots/emitted_expr_call_after_setup_arg_no_capture.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn side() -> int { 1 }
  
  fn get_x() -> Result<int, error> { Ok(2) }
  
  fn add(_a: int, _b: int) -> int { 0 }
  
  fn run() -> Result<int, error> {
    Ok(add(get_x()?, side()))
  }
---
package main

func side() int {
	return 1
}

func getX() (int, error) {
	return 2, nil
}

func add(_, _ int) int {
	return 0
}

func run() (int, error) {
	ret, err := getX()
	if err != nil {
		return 0, err
	}
	return add(ret, side()), nil
}
