tests/spec/emit/snapshots/emitted_expr_call_before_setup_arg_capture.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn side() -> int { 1 }
  
  fn get_y() -> Result<int, error> { Ok(2) }
  
  fn add(_a: int, _b: int) -> int { 0 }
  
  fn run() -> Result<int, error> {
    Ok(add(side(), get_y()?))
  }
---
package main

func side() int {
	return 1
}

func getY() (int, error) {
	return 2, nil
}

func add(_, _ int) int {
	return 0
}

func run() (int, error) {
	arg := side()
	ret, err := getY()
	if err != nil {
		return 0, err
	}
	return add(arg, ret), nil
}
