tests/spec/emit/snapshots/emitted_expr_literal_args_skip_capture.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn add3(_a: int, _b: int, _c: int) -> int { 0 }
  
  fn run() -> int {
    add3(1, 2, 3)
  }
---
package main

func add3(_, _, _ int) int {
	return 0
}

func run() int {
	return add3(1, 2, 3)
}
