tests/spec/emit/snapshots/empty_slice.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() {
    let x: Slice<int> = [];
  }
---
package main

func test() {
	_ = []int{}
}
