tests/spec/emit/snapshots/empty_slice_literal_is_not_nil_at_go_boundary.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  import "go:encoding/json"
  
  struct Payload {
    pub items: Slice<int>,
  }
  
  fn main() {
    let xs: Slice<int> = []
    let encoded = json.Marshal(xs).unwrap_or([]) as string
    if encoded != "[]" {
      panic(f"expected an explicit empty literal to encode as [], got {encoded}")
    }
    let payload = Payload { items: [] }
    let wrapped = json.Marshal(payload).unwrap_or([]) as string
    if wrapped != "{\"Items\":[]}" {
      panic(f"expected an empty slice field to encode as [], got {wrapped}")
    }
  }
---
package main

import "encoding/json"

type Payload struct {
	Items []int
}

func main() {
	xs := []int{}
	ret, err := json.Marshal(xs)
	if err != nil {
		ret = []byte{}
	}
	encoded := string(ret)
	if encoded != "[]" {
		panic("expected an explicit empty literal to encode as [], got " + encoded)
	}
	payload := Payload{Items: []int{}}
	ret_1, err_1 := json.Marshal(payload)
	if err_1 != nil {
		ret_1 = []byte{}
	}
	wrapped := string(ret_1)
	if wrapped != "{\"Items\":[]}" {
		panic("expected an empty slice field to encode as [], got " + wrapped)
	}
}
