tests/spec/emit/snapshots/empty_slice_of_function_type.snap
---
source: tests/spec/emit/literals.rs
description: "input: \nfn test() {\n  let x: Slice<fn(int) -> int> = [];\n}\n"
---
package main

func test() {
	_ = ([]func(int) int)(nil)
}
