tests/spec/emit/snapshots/empty_struct.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Blank {}\n"
---
package main

type Blank struct{}
