tests/spec/emit/snapshots/empty_struct_literal.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Empty {}\n\nfn test() -> Empty {\n  Empty {}\n}\n"
---
package main

type Empty struct{}

func test() Empty {
	return Empty{}
}
