tests/spec/emit/snapshots/empty_varargs_call_forwards_inferred_type_arg.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn first<T>(xs: VarArgs<T>) -> Option<T> { None }
  
  fn test() {
    let r: Option<int> = first()
    if r.unwrap_or(7) != 7 {
      panic("expected 7")
    }
  }
---
package main

func first[T any](_ ...T) (T, bool) {
	return *new(T), false
}

func test() {
	r, ok := first[int]()
	if !ok {
		r = 7
	}
	if r != 7 {
		panic("expected 7")
	}
}
